--- a/run_on_coal/run_on_coal.vcxproj
+++ b/run_on_coal/run_on_coal.vcxproj
@@ -65,13 +65,13 @@
       <WarningLevel>Level3</WarningLevel>
       <Optimization>Disabled</Optimization>
       <PreprocessorDefinitions>WIN32;_DEBUG;_CONSOLE;_LIB;%(PreprocessorDefinitions)</PreprocessorDefinitions>
-      <AdditionalIncludeDirectories>.\;..\vendor\lua\include;..\vendor\sajson;..\vendor\bullet;..\vendor\pugixml;..\vendor\lodepng;..\vendor\freetype26\include;..\vendor\glm;..\vendor\glfw\include;..\vendor\glew\include;..\vendor\SFML\include;..\vendor\zlib\include;..\vendor\utf8cpp\include;..\vendor\luauft8;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>.\;..\vendor\lua\include;..\vendor\sajson;..\vendor\bullet;..\vendor\pugixml;..\vendor\lodepng;..\vendor\freetype26\include;..\vendor\glm;..\vendor\glew\include;..\vendor\SFML\include;..\vendor\zlib\include;..\vendor\luauft8;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalDependencies>glew32.lib;glfw3dll.lib;opengl32.lib;BulletDynamics_d.lib;BulletCollision_d.lib;LinearMath_d.lib;freetype262d_dll.lib;lua53.lib;sfml-system-d.lib;sfml-audio-d.lib;zlibd.lib;%(AdditionalDependencies)</AdditionalDependencies>
-      <AdditionalLibraryDirectories>..\vendor\SFML\lib;..\vendor\lua\lib;..\vendor\bullet\lib;..\vendor\bass\lib;..\vendor\freetype26\lib;..\vendor\glfw\lib;..\vendor\glew\lib\Release\Win32;..\vendor\zlib\lib;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
+      <AdditionalDependencies>glew32.lib;opengl32.lib;BulletDynamics_d.lib;BulletCollision_d.lib;LinearMath_d.lib;freetype262d_dll.lib;lua53.lib;sfml-audio-d.lib;sfml-system-d.lib;sfml-window-d.lib;zlibd.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalLibraryDirectories>..\vendor\SFML\lib;..\vendor\lua\lib;..\vendor\bullet\lib;..\vendor\bass\lib;..\vendor\freetype26\lib;..\vendor\glew\lib\Release\Win32;..\vendor\zlib\lib;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
     </Link>
     <PostBuildEvent>
       <Command>
@@ -86,7 +86,7 @@
       <FunctionLevelLinking>true</FunctionLevelLinking>
       <IntrinsicFunctions>true</IntrinsicFunctions>
       <PreprocessorDefinitions>WIN32;NDEBUG;_CONSOLE;_LIB;%(PreprocessorDefinitions)</PreprocessorDefinitions>
-      <AdditionalIncludeDirectories>.;../vendor/lua/include;../vendor/sajson;../vendor/bullet;../vendor/pugixml;../vendor/lodepng;../vendor/SFML/include;../vendor/freetype26/include;../vendor/glew/include;../vendor/glfw/include;../vendor/glm;../vendor/zlib/include;../vendor/utf8cpp/include;../vendor/luautf8;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>.;../vendor/lua/include;../vendor/sajson;../vendor/bullet;../vendor/pugixml;../vendor/lodepng;../vendor/SFML/include;../vendor/freetype26/include;../vendor/glew/include;../vendor/glm;../vendor/zlib/include;../vendor/luautf8;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <EnablePREfast>false</EnablePREfast>
       <OpenMPSupport>false</OpenMPSupport>
       <FavorSizeOrSpeed>Speed</FavorSizeOrSpeed>
@@ -100,8 +100,8 @@
       <GenerateDebugInformation>false</GenerateDebugInformation>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
-      <AdditionalLibraryDirectories>..\vendor\SFML\lib;..\vendor\lua\lib;..\vendor\bullet\lib;..\vendor\bass\lib;..\vendor\freetype26\lib;..\vendor\glfw\lib;..\vendor\glew\lib\Release\Win32;..\vendor\zlib\lib;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
-      <AdditionalDependencies>glfw3dll.lib;glew32.lib;opengl32.lib;BulletDynamics.lib;BulletCollision.lib;LinearMath.lib;freetype262_dll.lib;lua53.lib;sfml-system.lib;sfml-audio.lib;zlib.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalLibraryDirectories>..\vendor\SFML\lib;..\vendor\lua\lib;..\vendor\bullet\lib;..\vendor\bass\lib;..\vendor\freetype26\lib;..\vendor\glew\lib\Release\Win32;..\vendor\zlib\lib;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
+      <AdditionalDependencies>glew32.lib;opengl32.lib;BulletDynamics.lib;BulletCollision.lib;LinearMath.lib;freetype262_dll.lib;lua53.lib;sfml-audio.lib;sfml-system.lib;sfml-window.lib;zlib.lib;%(AdditionalDependencies)</AdditionalDependencies>
       <AdditionalOptions>/SAFESEH:NO %(AdditionalOptions)</AdditionalOptions>
     </Link>
     <PostBuildEvent>
@@ -118,7 +118,7 @@
     <ClInclude Include="Lua\LuaDefinitions.File.h" />
     <ClInclude Include="Lua\LuaDefinitions.Font.h" />
     <ClInclude Include="Lua\LuaDefinitions.Geometry.h" />
-    <ClInclude Include="Lua\LuaDefinitions.Glfw.h" />
+    <ClInclude Include="Lua\LuaDefinitions.Sfml.h" />
     <ClInclude Include="Lua\LuaDefinitions.Light.h" />
     <ClInclude Include="Lua\LuaDefinitions.Model.h" />
     <ClInclude Include="Lua\LuaDefinitions.OpenGL.h" />
@@ -130,14 +130,13 @@
     <ClInclude Include="Lua\LuaDefinitions.Sound.h" />
     <ClInclude Include="Lua\LuaDefinitions.Texture.h" />
     <ClInclude Include="Lua\LuaDefinitions.Utils.h" />
-    <ClInclude Include="Lua\LuaDefinitions.Cursor.h" />
     <ClInclude Include="Managers\ConfigManager.h" />
     <ClInclude Include="Managers\ElementManager.h" />
     <ClInclude Include="Managers\LogManager.h" />
     <ClInclude Include="Lua\ArgReader.h" />
     <ClInclude Include="Lua\LuaArguments.h" />
     <ClInclude Include="Managers\EventManager.h" />
-    <ClInclude Include="Managers\GlfwManager.h" />
+    <ClInclude Include="Managers\SfmlManager.h" />
     <ClInclude Include="Managers\InheritanceManager.h" />
     <ClInclude Include="Managers\LuaManager.h" />
     <ClInclude Include="Managers\MemoryManager.h" />
@@ -150,7 +149,6 @@
     <ClInclude Include="RocInc.h" />
     <ClInclude Include="Scene\Camera.h" />
     <ClInclude Include="Scene\Collision.h" />
-    <ClInclude Include="Scene\Cursor.h" />
     <ClInclude Include="Scene\File.h" />
     <ClInclude Include="Scene\Font.h" />
     <ClInclude Include="Scene\Light.h" />
@@ -165,6 +163,7 @@
     <ClInclude Include="Managers\SoundManager.h" />
     <ClInclude Include="Scene\Texture.h" />
     <ClInclude Include="stdafx.h" />
+    <ClInclude Include="Utils\Pool.h" />
     <ClInclude Include="Utils\Utils.h" />
   </ItemGroup>
   <ItemGroup>
@@ -185,7 +184,7 @@
     <ClCompile Include="Lua\LuaDefinitions.File.cpp" />
     <ClCompile Include="Lua\LuaDefinitions.Font.cpp" />
     <ClCompile Include="Lua\LuaDefinitions.Geometry.cpp" />
-    <ClCompile Include="Lua\LuaDefinitions.Glfw.cpp" />
+    <ClCompile Include="Lua\LuaDefinitions.Sfml.cpp" />
     <ClCompile Include="Lua\LuaDefinitions.Light.cpp" />
     <ClCompile Include="Lua\LuaDefinitions.Model.cpp" />
     <ClCompile Include="Lua\LuaDefinitions.OpenGL.cpp" />
@@ -197,7 +196,6 @@
     <ClCompile Include="Lua\LuaDefinitions.Sound.cpp" />
     <ClCompile Include="Lua\LuaDefinitions.Texture.cpp" />
     <ClCompile Include="Lua\LuaDefinitions.Utils.cpp" />
-    <ClCompile Include="Lua\LuaDefinitions.Cursor.cpp" />
     <ClCompile Include="main.cpp">
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">false</ExcludedFromBuild>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Use</PrecompiledHeader>
@@ -209,7 +207,7 @@
     <ClCompile Include="Lua\ArgReader.cpp" />
     <ClCompile Include="Lua\LuaArguments.cpp" />
     <ClCompile Include="Managers\EventManager.cpp" />
-    <ClCompile Include="Managers\GlfwManager.cpp" />
+    <ClCompile Include="Managers\SfmlManager.cpp" />
     <ClCompile Include="Managers\InheritanceManager.cpp" />
     <ClCompile Include="Managers\LuaManager.cpp" />
     <ClCompile Include="Managers\MemoryManager.cpp" />
@@ -221,7 +219,6 @@
     <ClCompile Include="Model\Model.cpp" />
     <ClCompile Include="Scene\Camera.cpp" />
     <ClCompile Include="Scene\Collision.cpp" />
-    <ClCompile Include="Scene\Cursor.cpp" />
     <ClCompile Include="Scene\File.cpp" />
     <ClCompile Include="Scene\Font.cpp" />
     <ClCompile Include="Scene\Light.cpp" />
@@ -239,6 +236,7 @@
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
     </ClCompile>
+    <ClCompile Include="Utils\Pool.cpp" />
     <ClCompile Include="Utils\Utils.cpp" />
     <ClCompile Include="..\vendor\pugixml\pugixml.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">NotUsing</PrecompiledHeader>
