--- a/run_on_coal/run_on_coal.vcxproj
+++ b/run_on_coal/run_on_coal.vcxproj
@@ -150,6 +150,9 @@
     <ClInclude Include="Managers\PhysicsManager.h" />
     <ClInclude Include="Managers\PreRenderManager.h" />
     <ClInclude Include="Managers\RenderManager.h" />
+    <ClInclude Include="Model\BoneChainData.h" />
+    <ClInclude Include="Model\BoneChainGroup.h" />
+    <ClInclude Include="Model\BoneData.h" />
     <ClInclude Include="Model\Geometry.h" />
     <ClInclude Include="Model\Material.h" />
     <ClInclude Include="Model\Model.h" />
@@ -221,6 +224,9 @@
     <ClCompile Include="Managers\PhysicsManager.cpp" />
     <ClCompile Include="Managers\PreRenderManager.cpp" />
     <ClCompile Include="Managers\RenderManager.cpp" />
+    <ClCompile Include="Model\BoneChainData.cpp" />
+    <ClCompile Include="Model\BoneChainGroup.cpp" />
+    <ClCompile Include="Model\BoneData.cpp" />
     <ClCompile Include="Model\Geometry.cpp" />
     <ClCompile Include="Model\Material.cpp" />
     <ClCompile Include="Model\Model.cpp" />
