--- a/run_on_coal/run_on_coal.vcxproj.filters
+++ b/run_on_coal/run_on_coal.vcxproj.filters
@@ -171,6 +171,15 @@
     <ClCompile Include="Lua\LuaDefinitions.Sfml.cpp">
       <Filter>Lua</Filter>
     </ClCompile>
+    <ClCompile Include="Model\BoneData.cpp">
+      <Filter>Model</Filter>
+    </ClCompile>
+    <ClCompile Include="Model\BoneChainData.cpp">
+      <Filter>Model</Filter>
+    </ClCompile>
+    <ClCompile Include="Model\BoneChainGroup.cpp">
+      <Filter>Model</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="stdafx.h" />
@@ -333,6 +342,15 @@
     </ClInclude>
     <ClInclude Include="Lua\LuaDefinitions.Sfml.h">
       <Filter>Lua</Filter>
+    </ClInclude>
+    <ClInclude Include="Model\BoneData.h">
+      <Filter>Model</Filter>
+    </ClInclude>
+    <ClInclude Include="Model\BoneChainData.h">
+      <Filter>Model</Filter>
+    </ClInclude>
+    <ClInclude Include="Model\BoneChainGroup.h">
+      <Filter>Model</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
