--- a/run_on_coal/run_on_coal.vcxproj
+++ b/run_on_coal/run_on_coal.vcxproj
@@ -49,6 +49,7 @@
     <TargetName>$(ProjectName)_d</TargetName>
     <PreLinkEventUseInBuild>false</PreLinkEventUseInBuild>
     <PostBuildEventUseInBuild>false</PostBuildEventUseInBuild>
+    <CodeAnalysisRuleSet>MixedRecommendedRules.ruleset</CodeAnalysisRuleSet>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <LinkIncremental>false</LinkIncremental>
