--- a/run_on_coal/run_on_coal.vcxproj
+++ b/run_on_coal/run_on_coal.vcxproj
@@ -167,6 +167,7 @@
     <ClInclude Include="Managers\SoundManager.h" />
     <ClInclude Include="Scene\Texture.h" />
     <ClInclude Include="stdafx.h" />
+    <ClInclude Include="Utils\Event.h" />
     <ClInclude Include="Utils\Pool.h" />
     <ClInclude Include="Utils\Utils.h" />
   </ItemGroup>
@@ -238,6 +239,7 @@
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
     </ClCompile>
+    <ClCompile Include="Utils\Event.cpp" />
     <ClCompile Include="Utils\Pool.cpp" />
     <ClCompile Include="Utils\Utils.cpp" />
     <ClCompile Include="..\vendor\pugixml\pugixml.cpp">
