--- a/run_on_coal/run_on_coal.vcxproj.filters
+++ b/run_on_coal/run_on_coal.vcxproj.filters
@@ -177,6 +177,9 @@
     <ClCompile Include="Model\BoneData.cpp">
       <Filter>Model</Filter>
     </ClCompile>
+    <ClCompile Include="Utils\Event.cpp">
+      <Filter>Utils</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="stdafx.h" />
@@ -348,6 +351,9 @@
     </ClInclude>
     <ClInclude Include="Model\BoneData.h">
       <Filter>Model</Filter>
+    </ClInclude>
+    <ClInclude Include="Utils\Event.h">
+      <Filter>Utils</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
