Updating Bullet Physics library to version 2.85.1

--- a/run_on_coal/run_on_coal.vcxproj
+++ b/run_on_coal/run_on_coal.vcxproj
@@ -96,6 +96,7 @@
       <FloatingPointModel>Fast</FloatingPointModel>
       <ForcedIncludeFiles>
       </ForcedIncludeFiles>
+      <EnableEnhancedInstructionSet>StreamingSIMDExtensions2</EnableEnhancedInstructionSet>
     </ClCompile>
     <Link>
       <SubSystem>Windows</SubSystem>
