--- a/run_on_coal/run_on_coal.vcxproj
+++ b/run_on_coal/run_on_coal.vcxproj
@@ -131,7 +131,6 @@
     <ClInclude Include="Elements\Model\Bone.h" />
     <ClInclude Include="Elements\Model\Model.h" />
     <ClInclude Include="Elements\Model\Skeleton.h" />
-    <ClInclude Include="Elements\Quad.h" />
     <ClInclude Include="Elements\RenderTarget.h" />
     <ClInclude Include="Elements\Scene.h" />
     <ClInclude Include="Elements\Shader.h" />
@@ -162,13 +161,14 @@
     <ClInclude Include="Lua\ArgReader.h" />
     <ClInclude Include="Lua\LuaArguments.h" />
     <ClInclude Include="Managers\EventManager.h" />
+    <ClInclude Include="Managers\RenderManager\Quad.h" />
+    <ClInclude Include="Managers\RenderManager\RenderManager.h" />
     <ClInclude Include="Managers\SfmlManager.h" />
     <ClInclude Include="Managers\InheritanceManager.h" />
     <ClInclude Include="Managers\LuaManager.h" />
     <ClInclude Include="Managers\MemoryManager.h" />
     <ClInclude Include="Managers\PhysicsManager.h" />
     <ClInclude Include="Managers\PreRenderManager.h" />
-    <ClInclude Include="Managers\RenderManager.h" />
     <ClInclude Include="RocInc.h" />
     <ClInclude Include="Managers\SoundManager.h" />
     <ClInclude Include="stdafx.h" />
@@ -197,7 +197,6 @@
     <ClCompile Include="Elements\Model\Bone.cpp" />
     <ClCompile Include="Elements\Model\Model.cpp" />
     <ClCompile Include="Elements\Model\Skeleton.cpp" />
-    <ClCompile Include="Elements\Quad.cpp" />
     <ClCompile Include="Elements\RenderTarget.cpp" />
     <ClCompile Include="Elements\Scene.cpp" />
     <ClCompile Include="Elements\Shader.cpp" />
@@ -233,13 +232,14 @@
     <ClCompile Include="Lua\ArgReader.cpp" />
     <ClCompile Include="Lua\LuaArguments.cpp" />
     <ClCompile Include="Managers\EventManager.cpp" />
+    <ClCompile Include="Managers\RenderManager\Quad.cpp" />
+    <ClCompile Include="Managers\RenderManager\RenderManager.cpp" />
     <ClCompile Include="Managers\SfmlManager.cpp" />
     <ClCompile Include="Managers\InheritanceManager.cpp" />
     <ClCompile Include="Managers\LuaManager.cpp" />
     <ClCompile Include="Managers\MemoryManager.cpp" />
     <ClCompile Include="Managers\PhysicsManager.cpp" />
     <ClCompile Include="Managers\PreRenderManager.cpp" />
-    <ClCompile Include="Managers\RenderManager.cpp" />
     <ClCompile Include="Managers\SoundManager.cpp" />
     <ClCompile Include="stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Create</PrecompiledHeader>
