Disabled console scrolling and text selection to prevent main thread interruptions. Added client Lua functions: networkGetState, networkGetPing. Added server Lua functions: networkGetClientAddress, networkGetClientPing.

--- a/roc_server/roc_server.vcxproj
+++ b/roc_server/roc_server.vcxproj
@@ -78,7 +78,7 @@
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
-      <GenerateDebugInformation>true</GenerateDebugInformation>
+      <GenerateDebugInformation>false</GenerateDebugInformation>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
       <AdditionalLibraryDirectories>../vendor/lua/lib;../vendor/SFML/lib;../vendor/RakNet/lib;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
