Client: parent class Drawable for Texture and RenderTarget classes

--- a/run_on_coal/run_on_coal.vcxproj
+++ b/run_on_coal/run_on_coal.vcxproj
@@ -123,6 +123,7 @@
     <ClInclude Include="Elements\Animation\BoneFrameData.h" />
     <ClInclude Include="Elements\Camera.h" />
     <ClInclude Include="Elements\Collision.h" />
+    <ClInclude Include="Elements\Drawable.h" />
     <ClInclude Include="Elements\Element.h" />
     <ClInclude Include="Elements\File.h" />
     <ClInclude Include="Elements\Font.h" />
@@ -192,6 +193,7 @@
     <ClCompile Include="Elements\Animation\BoneFrameData.cpp" />
     <ClCompile Include="Elements\Camera.cpp" />
     <ClCompile Include="Elements\Collision.cpp" />
+    <ClCompile Include="Elements\Drawable.cpp" />
     <ClCompile Include="Elements\Element.cpp" />
     <ClCompile Include="Elements\File.cpp" />
     <ClCompile Include="Elements\Font.cpp" />
